# quiz_internship

./: .dockerignore  .env.sample  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2024-10-24-18-47-09_init_check.py  2024-10-28-14-58-13_model_for_check_setup.py  2024-10-28-16-52-01_model_for_check_setup.py  2024-10-30-18-30-23_add_user_table.py  2025-01-06-16-09-57_user_table.py  2025-01-06-16-11-04_company_table.py  2025-01-08-10-28-09_user_table.py  2025-01-08-10-28-24_company_table.py  2025-01-09-09-08-06_upd_company_model.py  2025-01-09-18-03-43_company_membership_table.py  2025-01-09-18-37-29_upd_company_membership_table.py  2025-01-13-11-48-38_user_table.py  2025-01-13-11-49-52_company_table.py  2025-01-13-11-50-57_membership_table.py  2025-01-17-13-09-28_create_user_table.py  2025-01-17-13-09-45_create_company_table.py  2025-01-17-13-10-10_create_invite_table.py  2025-01-17-13-15-18_upd_invite_table.py  2025-01-20-19-18-03_init.py  2025-01-27-13-14-16_init.py  2025-01-27-19-03-56_upd_unique_fields.py  2025-02-01-17-16-45_upd_ondelete.py  2025-02-03-15-33-43_quiz_table.py  2025-02-04-09-11-25_upd_quiz.py  2025-02-04-09-22-11_upd_quiz.py  2025-02-04-09-24-24_upd_quiz.py  2025-02-04-09-25-14_upd_quiz.py  2025-02-04-09-26-27_upd_quiz.py  2025-02-04-18-11-28_upd_quiz.py  2025-02-04-19-35-58_upd_quiz.py  (+2 more)
tests/: _test.py  company_test.py  conftest.py  health_check_test.py  user_test.py
(+48 files in other folders)
