[tool.poetry]
name = "meduzzen-service-app"
version = "0.1.0"
description = ""
authors = ["vitayushchyk <vitay2715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.2" }
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"